# compound

./: .gitignore  2026-04-26-041952-should-be-fine-now.txt  README.md  continue_pipelinework.txt  skills-lock.json  tribeux-master-plan.md
tribeux-domtree/: pyproject.toml
tribeux-domtree/examples/: airbnb.py  nike.py  nike_footer_mask.py
tribeux-domtree/tribeux_domtree/: __init__.py  analyze.py  cluster.py  extract.py  patch.py  perturb.py  render.py  score.py  tree.py  types.py
tribeux-server/: .env.example  README.md  pyproject.toml
tribeux-server/samples/: cohort.json  site_1.json
tribeux-server/tribeux_server/: __init__.py  cache.py  claude_analyst.py  cohort.py  frames.py  inference.py  jobs.py  main.py  pipeline.py  render.py  schemas.py  timeline.py
tribeux/app/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
tribeux/app-lab/: package-lock.json  package.json
tribeux/app-lab/src/: App.css  index.css
tribeux/app/public/assets/: fsaverage5.glb
tribeux/app/src/: App.css  App.jsx  BrainCanvas.jsx  Demo.jsx  Landing.jsx  Pitch.jsx  Report.jsx  ScanHandoff.jsx  Shell.jsx  UrlPill.jsx  index.css  motion.js
tribeux/app/src/lib/: api.js  mockApi.js  mockFixture.js  useAnalysis.js
tribeux/frontend/: index.html
tribeux/frontend/src/: App.jsx  LandingA.jsx  LandingB.jsx  tokens.jsx
urltovideo/url_to_video/: recorder.py
