[project]
name = "tribeux-server"
version = "0.1.0"
description = "FastAPI orchestrator for the TribeUX neural UX pipeline (render -> stub TRIBE inference -> Claude analyst -> tribedomtree patching -> v2 re-inference)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "anthropic>=0.34",
    "tribeux-domtree",
    "playwright>=1.40",
    "pillow>=10",
    "moviepy==2.2.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["httpx>=0.27", "pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["tribeux_server"]

[tool.uv.sources]
tribeux-domtree = { path = "../tribeux-domtree", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
